feat(refactor infraestructure)

--- a/.env
+++ b/.env
@@ -14,11 +14,11 @@ SPRING_APPLICATION_NAME=detail-shop
 # 2. CONFIGURACIÓN DE LA BASE DE DATOS (Variables Sensibles/Externas)
 # -------------------------------------------------------------------
 # Define las partes que componen la URL
-DB_HOST=
-DB_PORT=
-DB_NAME=
-DB_USER=
-DB_PASS=
+DB_HOST=192.168.101.75
+DB_PORT=5432
+DB_NAME=shop-detail
+DB_USER=postgres
+DB_PASS=Devel@p1234
 
 # Ensambla la URL para Spring Boot
 SPRING_DATASOURCE_URL=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
