--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,23 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Esto permite que Hibernate agrupe los inserts en una sola sentencia SQL
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+
 # Configuracion del esquema por defecto (si lo necesitas)
 spring.jpa.properties.hibernate.default_schema=local
 spring.jpa.open-in-view=false
+
+
+spring.servlet.multipart.enabled=true
+# Tamaño máximo del archivo (ajústalo según necesites)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Muestra los detalles de por qué falló el mapeo del JSON
+logging.level.org.springframework.web.servlet.mvc.method.annotation.ServletInvocableHandlerMethod=DEBUG
+logging.level.org.springframework.web.bind.annotation.support.HandlerMethodInvoker=DEBUG
+# Esta es la clave para ver errores de lectura de mensajes
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestResponseBodyMethodProcessor=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
